--- a/src/screens/homeScreen.css
+++ b/src/screens/homeScreen.css
@@ -17,11 +17,12 @@ body{
 
 
 button{
-    color: #fbfcfb;
-    padding: 10px 25px;
-    background: transparent;
+    color: #1b1b1b;
+    font-weight: bold;
+    padding: 10px 35px;
+    background: #ffffff;
     border: 1px solid #fff;
-    border-radius: 20px;
+    border-radius: 10px;
     outline: none;
     cursor: pointer;
 }
